tests/neg-macros/newClassExtendsNoParents/Test_2.scala
def test: Any = makeClass("foo") // error
